[gd_scene load_steps=3 format=3 uid="uid://dj2va6q8vy1jg"]

[ext_resource type="Script" path="res://System/Menu/TeamSelect/GD_TeamSelect.gd" id="1_doa6j"]
[ext_resource type="Script" path="res://System/Menu/TeamSelect/GD_DrawUtils.gd" id="2_w8jeg"]

[node name="TeamSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_doa6j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 705.0
offset_top = 798.0
offset_right = 1052.0
offset_bottom = 928.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Char1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "null 1"

[node name="Char2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "null 2"

[node name="Char3" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "null 3"

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="ReferenceTopGrid" type="ReferenceRect" parent="."]
layout_mode = 0
offset_left = 498.0
offset_top = 428.0
offset_right = 1264.0
offset_bottom = 755.0
border_color = Color(1, 1, 1, 1)
border_width = 2.0

[node name="ReferenceBtmGrid" type="ReferenceRect" parent="."]
layout_mode = 0
offset_left = 650.0
offset_top = 428.0
offset_right = 1117.0
offset_bottom = 755.0
border_color = Color(1, 1, 1, 1)
border_width = 2.0

[node name="Node2D" type="Node2D" parent="."]

[node name="Util" type="Node" parent="."]
script = ExtResource("2_w8jeg")

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Char1" to="." method="_on_char_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Char2" to="." method="_on_char_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Char3" to="." method="_on_char_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="draw" from="Node2D" to="." method="_on_node_2d_draw"]
